# seirchain-fractal-dlt

./: .gitignore  CONTRIBUTING.md  README.md  SeirChain_System_Expectations_Statement.md  gradlew  gradlew.bat  index.html  plan_for_cryptographic_security.md  plan_for_development.md  settings.gradle  whitepaper.md
IM-JULES-LOOK-AT-ME/: CHANGELOG.md  JULES_RULES.md
SeirChain/: Cargo.toml  Dockerfile  database.rs  lib.rs
SeirChain/core/: mod.rs
SeirChain/core/consensus/: hierarchical_recursive.rs  mod.rs  proof_of_fractal.rs
SeirChain/core/security/: mod.rs  redundant_paths.rs
SeirChain/core/triad_matrix/: mod.rs  triad_structure.rs
SeirChain/database/: schema.rs
SeirChain/interface/: mod.rs
SeirChain/interface/economics/: mod.rs  waclanium_token.rs
SeirChain/interface/explorer/: mod.rs  triad_explorer.rs
SeirChain/interface/ledger/: ledger.rs
SeirChain/interface/onboarding/: onboarding.rs
SeirChain/interface/virtual_machine/: mod.rs  svm_executor.rs
SeirChain/interface/wallet/: create_wallet.rs  mod.rs  wallet.rs
SeirChain/network/: mod.rs  p2p.rs
SeirChain/network/routing/: mod.rs  multi_path_fractal.rs
SeirChain/src/: miner.rs  tests.rs
SeirChain/testnet/: docker-compose.yml  manage_testnet.sh
SeirChain/tests/: database_tests.rs  integration_tests.rs  p2p_tests.rs  security_tests.rs
app/: build.gradle
app/src/main/: AndroidManifest.xml
frontend/src/: App.css  App.js
frontend/src/components/: CheckBalance.js  CreateWallet.js  RecentActivity.js  SendTransaction.js
iphone/wallet/wallet.xcodeproj/: project.pbxproj
(+5 files in other folders)
