[package]
name = "seirchain"
version = "0.1.0"
edition = "2021"

[lib]
name = "seirchain"
path = "lib.rs"

[dependencies]
rand = "0.8.5"
sha2 = "0.10.2"
hex = "0.4.3"
rand_chacha = "0.3.1"
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["json"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
rocksdb = "0.21.0"
futures = "0.3"
clap = { version = "4.3.7", features = ["derive"] }
warp = "0.3"

[[test]]
name = "security_tests"
path = "tests/security_tests.rs"

[[bin]]
name = "bencher"
path = "src/bin/bencher.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"
